--- a/django/paper_tracker/papers/templates/papers/collection.html
+++ b/django/paper_tracker/papers/templates/papers/collection.html
@@ -11,7 +11,7 @@
         <th>Notes</th>
     </tr>
 
-    {% for memb in collection.collectionpapers_set.all %}
+    {% for memb in members %}
     <tr>
         <td>{{ memb.paper.title }}</td>
         <td>
