--- a/django/paper_tracker/papers/templates/papers/cpaper.html
+++ b/django/paper_tracker/papers/templates/papers/cpaper.html
@@ -1,9 +1,13 @@
+<link rel="stylesheet"type="text/css" href="/static/main.css">
+
 <form method="post">
 {% csrf_token %}
 <label for="title">Title:</label><input type="text" name="title" size="64" value="{{memb.paper.title}}"></input> <br/>
 <label for="pdf_url">PDF:</label><input type="text" name="pdf_url" size="64" value="{{memb.paper.pdf_url}}"/> <br/>
 <label for="priority">Priority:</label><input type="text" name="priority" value="{{memb.priority}}"/> <br/>
-<label for="read">% Read:</label><input type="text" name="read" value="{{memb.read}}"/> <br/>
+<label for="intro_conclusion_read">Intro+conclusion read:</label><input type="checkbox" name="intro_conclusion_read" {{memb.intro_conclusion_read|yesno:'checked="",'}}/> <br/>
+<label for="refs_expanded">Refs expanded:</label><input type="checkbox" name="refs_expanded" {{memb.refs_expanded|yesno:'checked="",'}}/> <br/>
+<label for="paper_read">Paper finished:</label><input type="checkbox" name="paper_read" {{memb.paper_read|yesno:'checked="",'}}/> <br/>
 <label for="notes">Notes:</label>
 <textarea name="notes">{{memb.notes}}</textarea><br/>
 
