--- a/django/paper_tracker/papers/templates/papers/paper_new.html
+++ b/django/paper_tracker/papers/templates/papers/paper_new.html
@@ -2,6 +2,8 @@
 {% csrf_token %}
 <label for="Title">Title:</label><input type="text" name="Title" size="64" id=title /> <br/>
 <label for="Priority">Priority:</label><input type="text" name="Priority" value=1 /> <br/>
+<label>Year published:<input type="text" name="year"></label>
+<label>Publication:<input type="text" name="publication"></label>
 <input type="submit" value="Create" />
 </form>
 
