--- a/django/paper_tracker/papers/templates/papers/cpaper.html
+++ b/django/paper_tracker/papers/templates/papers/cpaper.html
@@ -4,6 +4,9 @@
 {% csrf_token %}
 <label for="title">Title:</label><input type="text" name="title" size="64" value="{{memb.paper.title}}"></input> <br/>
 <label for="pdf_url">PDF:</label><input type="text" name="pdf_url" size="64" value="{{memb.paper.pdf_url}}"/> <br/>
+<label>Year published:<input type="text" name="year" value="{{memb.paper.year | default:""}}"></label>
+<label>Publication:<input type="text" name="publication" value="{{memb.paper.publication | default:""}}"></label>
+<hr/>
 <label for="priority">Priority:</label><input type="text" name="priority" value="{{memb.priority}}"/> <br/>
 <label for="intro_conclusion_read">Intro+conclusion read:</label><input type="checkbox" name="intro_conclusion_read" {{memb.intro_conclusion_read|yesno:'checked="",'}}/> <br/>
 <label for="refs_expanded">Refs expanded:</label><input type="checkbox" name="refs_expanded" {{memb.refs_expanded|yesno:'checked="",'}}/> <br/>
